--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/AdventOfCode2023/bin/Debug/net6.0
+/AdventOfCode2023/obj
